WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148422
Subpixel positioned iframe's repaint area calculation problem.
https://bugs.webkit.org/show_bug.cgi?id=148422
Summary
Subpixel positioned iframe's repaint area calculation problem.
Jinyoung Hur
Reported
2015-08-25 01:27:06 PDT
Created
attachment 259828
[details]
screen capture of bug I've been digging a plugin rendering problem of Win port, which is not-rendering the bottom or right edge of flash contents in some situation. After some investigation, I got to suspect the subpixel positioning of widgets and found a related layout test, hidpi-content-inside-iframe-leaves-trails.html. I modified this test little bit to reflect my circumstances(iframe left = 0.5, foo div left = 0.5), and it shows a problematic result, the repaint area is not covering the whole area of the changed element. I've tested and seen this on Safari8, Win and WinCairo port's WinLauncher. Can anybody look into this?
Attachments
screen capture of bug
(53.34 KB, image/png)
2015-08-25 01:27 PDT
,
Jinyoung Hur
no flags
Details
simple content
(1.41 KB, text/html)
2015-08-25 01:28 PDT
,
Jinyoung Hur
no flags
Details
Patch
(6.41 KB, patch)
2015-08-26 15:47 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-mavericks
(550.80 KB, application/zip)
2015-08-26 16:19 PDT
,
Build Bot
no flags
Details
Patch
(7.02 KB, patch)
2015-08-26 16:21 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews100 for mac-mavericks
(550.25 KB, application/zip)
2015-08-26 16:53 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews106 for mac-mavericks-wk2
(602.67 KB, application/zip)
2015-08-26 16:58 PDT
,
Build Bot
no flags
Details
Patch
(7.02 KB, patch)
2015-08-26 19:01 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.97 KB, patch)
2015-08-27 07:55 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Jinyoung Hur
Comment 1
2015-08-25 01:28:02 PDT
Created
attachment 259829
[details]
simple content
alan
Comment 2
2015-08-26 15:47:24 PDT
Created
attachment 259987
[details]
Patch
Build Bot
Comment 3
2015-08-26 16:19:15 PDT
Comment on
attachment 259987
[details]
Patch
Attachment 259987
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/110716
New failing tests: fast/repaint/hidpi-content-inside-iframe-leaves-trails.html
Build Bot
Comment 4
2015-08-26 16:19:17 PDT
Created
attachment 259988
[details]
Archive of layout-test-results from ews102 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-mavericks Platform: Mac OS X 10.9.5
alan
Comment 5
2015-08-26 16:21:26 PDT
Created
attachment 259989
[details]
Patch
Build Bot
Comment 6
2015-08-26 16:53:41 PDT
Comment on
attachment 259989
[details]
Patch
Attachment 259989
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/110844
New failing tests: fast/repaint/hidpi-content-inside-iframe-leaves-trails.html
Build Bot
Comment 7
2015-08-26 16:53:43 PDT
Created
attachment 259993
[details]
Archive of layout-test-results from ews100 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-mavericks Platform: Mac OS X 10.9.5
Build Bot
Comment 8
2015-08-26 16:58:19 PDT
Comment on
attachment 259989
[details]
Patch
Attachment 259989
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/110847
New failing tests: fast/repaint/hidpi-content-inside-iframe-leaves-trails.html
Build Bot
Comment 9
2015-08-26 16:58:22 PDT
Created
attachment 259994
[details]
Archive of layout-test-results from ews106 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
alan
Comment 10
2015-08-26 19:01:00 PDT
Created
attachment 260018
[details]
Patch
WebKit Commit Bot
Comment 11
2015-08-27 07:46:30 PDT
Comment on
attachment 260018
[details]
Patch Rejecting
attachment 260018
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 260018, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: /git.webkit.org/WebKit e3ca448..837354a master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 189021 = e3ca4483d588f09c02f6d27ea59adb03257957b9
r189022
= 837354a887b5501d5be8dc51b8b4c4e47c9c97e6 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output:
http://webkit-queues.webkit.org/results/112904
alan
Comment 12
2015-08-27 07:55:18 PDT
Created
attachment 260055
[details]
Patch
WebKit Commit Bot
Comment 13
2015-08-27 08:48:51 PDT
Comment on
attachment 260055
[details]
Patch Clearing flags on attachment: 260055 Committed
r189026
: <
http://trac.webkit.org/changeset/189026
>
WebKit Commit Bot
Comment 14
2015-08-27 08:48:57 PDT
All reviewed patches have been landed. Closing bug.
Jinyoung Hur
Comment 15
2015-08-27 18:52:13 PDT
Thanks for a fast patch. It's working!
alan
Comment 16
2015-08-27 18:53:05 PDT
(In reply to
comment #15
)
> Thanks for a fast patch. > It's working!
Great! Thanks for reporting it!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug