Subpixel positioned iframe's repaint area calculation problem. https://bugs.webkit.org/show_bug.cgi?id=148422

When the repaint rect position is floored for iframes, we need
to expand the size so that it still covers the content.

Reviewed by Simon Fraser.

Source/WebCore:

Test: fast/repaint/content-inside-subpixel-positioned-iframe.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeRectForRepaint):

LayoutTests:

* fast/repaint/content-inside-subpixel-positioned-iframe-expected.txt: Added.
* fast/repaint/content-inside-subpixel-positioned-iframe.html: Copied from LayoutTests/fast/repaint/hidpi-content-inside-iframe-leaves-trails.html.
* fast/repaint/hidpi-content-inside-iframe-leaves-trails.html:


Canonical link: https://commits.webkit.org/166624@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189026 268f45cc-cd09-0410-ab3c-d52691b4dbfc